--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,9 @@
 <!doctype html>
+<head>
+    <meta http-equiv="refresh" content="300">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
+</head>
 <title>{% block title %}{% endblock %} - M0nitor</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <h1>M0nitor</h1>
 <section class="content">
   <header>
